<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F0E5"
    tools:context=".registrasi">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/daftar1"
        android:textAlignment="center"
        android:textColor="#102C57"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363"
        app:drawableTint="#CA2828" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="164dp"
        android:layout_height="168dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo1" />

    <TextView
        android:id="@+id/tanya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/poppins"
        android:text="@string/sudah_memiliki_akun"
        android:textColor="#102C57"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintVertical_bias="0.425" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="70dp"
        android:layout_height="32dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintVertical_bias="0.296"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:orientation="vertical"
        android:paddingHorizontal="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <TextView
            android:id="@+id/text_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/nama1"
            android:textColor="#102C57"
            tools:layout_editor_absoluteX="116dp"
            tools:layout_editor_absoluteY="586dp" />


        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:autofillHints=""
            android:background="@drawable/bg_input"
            android:inputType="textEmailAddress"
            android:paddingLeft="25dp"
            android:textColor="@color/black"
            android:textColorHint="#767676"
            android:textSize="16sp"
            tools:ignore="LabelFor,RtlHardcoded,RtlSymmetry,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins"
            android:text="@string/email"
            android:textColor="#102C57"
            tools:layout_editor_absoluteX="116dp"
            tools:layout_editor_absoluteY="586dp" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:autofillHints=""
            android:background="@drawable/bg_input"
            android:inputType="textEmailAddress"
            android:paddingStart="25dp"
            android:textColor="@color/black"
            android:textColorHint="#767676"
            android:textSize="16sp"
            tools:ignore="LabelFor,RtlSymmetry,TouchTargetSizeCheck,SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins"
            android:text="@string/password1"
            android:textColor="#102C57"
            tools:layout_editor_absoluteX="116dp"
            tools:layout_editor_absoluteY="586dp" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:autofillHints=""
            android:background="@drawable/bg_input"
            android:inputType="textPassword"
            android:paddingStart="25dp"
            android:textColor="@color/black"
            android:textColorHint="#767676"
            android:textSize="16sp"
            tools:ignore="LabelFor,RtlSymmetry,TouchTargetSizeCheck,SpeakableTextPresentCheck" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/daftar2"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>