<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F0E5"
    tools:context=".detail_dokter">

    <TextView
        android:id="@+id/url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="url"
        android:visibility="invisible"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAccessibility="no" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="29dp"
        android:layout_height="24dp"
        android:src="@drawable/back"
        android:layout_marginTop="69dp"
        android:layout_marginStart="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/detail_doctor"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/isi"
        android:layout_width="322dp"
        android:layout_height="553dp"
        android:orientation="vertical"
        android:layout_marginTop="37dp"
        android:background="@drawable/bg_circle2"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="250dp"
            android:layout_height="149dp"
            android:src="@drawable/character"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:importantForAccessibility="no" />

        <LinearLayout
            android:layout_width="282dp"
            android:layout_height="345dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_circle"
            android:orientation="vertical"
            tools:ignore="TextSizeCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:orientation="vertical"
                android:paddingHorizontal="18dp">

                <TextView
                    android:id="@+id/nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/isi_nama_dokter"
                    android:textColor="#102C57"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="18dp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/briefcase"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tahun"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/isi_tahun"
                        android:textColor="#102C57"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:orientation="vertical"
                android:paddingHorizontal="18dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/bidang_keahlian"
                    android:textColor="#102C57"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/bidang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/isi_bidang"
                    android:textColor="#102C57"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:orientation="vertical"
                android:paddingHorizontal="18dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/alumnus"
                    android:textColor="#102C57"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/alumnus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/isi_univ"
                    android:textColor="#102C57"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:orientation="vertical"
                android:paddingHorizontal="18dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/nomor_str"
                    android:textColor="#102C57"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/stp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/isi_nomor"
                    android:textColor="#102C57"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:orientation="vertical"
                android:paddingHorizontal="18dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="Harga"
                    android:textColor="#102C57"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/hargadoc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/rp_0_000"
                    android:textColor="#102C57"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnpilih"
        android:layout_width="253dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_button"
        android:text="@string/pilih"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/isi"
        android:fontFamily="@font/poppins_bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>